# mydeep2

./: .gitignore  Activation.cpp  Activation.h  Adam.cpp  Adam.h  Affine.cpp  Affine.h  BatchNorm.cpp  BatchNorm.h  CMakeLists.txt  Common.cpp  Common.h  Core.h  Dense.h  Dropout.cpp  Dropout.h  Function.cpp  Function.h  Hidden.cpp  Hidden.h  Layer.cpp  Layer.h  Momentum.cpp  Momentum.h  NAG.cpp  NAG.h  Network.cpp  Network.h  Optimizer.cpp  Optimizer.h  Output.cpp  Output.h  README.md  main.cpp
